syntax="proto3";

package movies;

service Movies {
    rpc Search (SearchRequest) returns (SearchResponse);
    rpc Detail (DetailRequest) returns (DetailResponse);
}

message SearchRequest {
    string searchword = 1;
    int64 pagination = 2;
}

message SearchResponse {
    repeated Movie movie = 1;
    Pagination pagination = 2;
}

message DetailRequest {
    string ImdbID = 1;
}

message DetailResponse {
    DetailMovie data = 1;
}

message Movie {
    string Title = 1;
    string Year = 2;
    string ImdbID = 3 [json_name="imdb_id"];
    string Type = 4;
    string Poster = 5;
}

message DetailMovie {
    string Title = 1;
    string Year = 2;
    string Rated = 3;
    string Released = 4;
    string Runtime = 5;
    string Genre = 6;
    string Director = 7;
    string Writer = 8;
    string Actors = 9;
    string Plot = 10;
    string Language = 11;
    string Country = 12;
    string Awards = 13;
    string Poster = 14;
    repeated Rating Ratings = 15;
    string Metascore  = 16;
    string ImdbRating = 17;
    string ImdbVotes  = 18;
    string ImdbID     = 19;
    string Type       = 20;
    string DVD        = 21;
    string BoxOffice  = 22;
    string Production = 23;
    string Website    = 24;
}

message Rating {
    string Source = 1;
    string Value = 2;
}

message Pagination {
    int64 page_size = 1;
    int64 current_page = 2;
    int64 total_page = 3;
    int64 total_result = 4;
}
  